Bugfix: new availabilities not showing up
-fixed a bug preventing new availabilities from showing up

--- a/aspnet-core/src/pogoshift.Web.Mvc/wwwroot/css/calendar.scss
+++ b/aspnet-core/src/pogoshift.Web.Mvc/wwwroot/css/calendar.scss
@@ -534,6 +534,13 @@
 }
 
 @media (max-width: 768px) {
+    /* NOTE: Space for names */
+    /*.scheduling-calendar {
+        margin-left: 100px;
+    }*/
+}
+
+@media (max-width: 768px) {
 
 
     .calendar .month-day {
